<resources>
    <string name="app_name">Fields</string>
    <string name="title_activity_maps">Fields</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="email">Email</string>
    <string name="user_id">User id</string>
    <string name="password">Password</string>
    <string name="confirm_password">confirm Password</string>
    <string name="station_id">Station id</string>
    <string name="field_name">fieldName</string>
    <string name="fill_field">Please fill the field</string>
    <string name="fill_fields">Please fill the fields</string>
    <string name="error_login">Incorrect email or password.
                               Please try again </string>
    <string name="error_register">This email has exist </string>
    <string name="can_not_register">Sorry, the registeration did not succeed. please try again later </string>
    <string name="min_user_name">User name should be a minimum of 5 characters </string>
    <string name="email_validate">The email you provided is invalid</string>
    <string name="password_not_confirm">The passwords you provided do not match</string>
    <string name="password_length">The password should be a minimum of 6 characters</string>
    <string name="profile_update">Your profile has been successfully updated</string>
    <string name="no_chose">No fields selected</string>
    <string name="title_activity_current_mission">Map</string>
    <string name="continuous_option">Continuous</string>
    <string name="waypoint_optopn">Waypoint</string>
    <string name="waypoint_draw">waypoint_draw</string>
    <string name="continu_draw">continu_draw</string>
    <string name="delete_option">Delete</string>
    <string name="save_option">Save</string>
    <string name="undo_option">Undo</string>
    <string name="edit_option">Edit</string>
    <string name="show_option">Show</string>
    <string name="frame_path">frame</string>
    <string name="full_path">full</string>
    <string name="define_close_area">You have to define an inclosed area</string>
    <string name="field_too_big">The field is too large. please divide it into several sections</string>
    <string name="chosen_fields">Chosen fields</string>
    <string name="show_all_fields">Show fields</string>
    <string name="edit_fields">Edit field</string>
    <string name="name_for_field">Please enter a name for the field</string>
    <string name="field_name_has_exist">Field name already exist. Please enter a new name </string>
    <string name="add_more_fields">Add field </string>
    <string name="delete_all_fields">Delete all fields </string>
    <string name="go_to_scan"> Scan</string>
    <string name="no_field_to_delete">No field to delete </string>
    <string name="not_chosen_field">The field has not been selected.</string>
    <string name="user_details">User details</string>
    <string name="no_fields">There are no fields</string>
    <string name="delete_history">Are you sure you want to delete the history?</string>
    <string name="delete_item_from_history">Are you sure you want to delete this item from history?</string>
    <string name="delete_field">Are you sure you want to delete this field?</string>
    <string name="busy_drone1">The drone is currently scanning.
                                You can track the current scanning by clicking "current mission" in top menu</string>
    <string name="busy_drone2">Are you sure you want to delete this field?</string>
    <string name="cant_delete"> It is not possible to delete the field while scanning. </string>
    <string name="cant_edit"> It is not possible to edit the field while scanning. </string>
    <string name="latitude">latitude</string>
    <string name="latitude_drone_home">lat</string>
    <string name="longtitude">longtitude</string>
    <string name="longtitude_drone_home">lon</string>
    <string name="no_history">No history</string>
    <string name="no_current_scanning">No current scanning is detected</string>
    <string name="select_resolution">Please select resolution</string>
    <string name="tap_field">Tap on the field you want to edit</string>
    <string name="confiem_delete_scanning">Are you sure you want to stop scanning?</string>
    <string name="stop_scanning">stop scanning?</string>
    <string name="long_name">the name you entered is too long</string>
    <string name="connection_error">Connection error. Please try later</string>
    <string name="problem_server">There is a some problem, please try again</string>
    <string name="edit_explain">Hold and drag marker to replace position</string>
    <string name="draw_explain1">In order to mark a field, tap the pencil icon and choose the marking method:</string>
    <string name="draw_explain2">using waypoint - mark your field endpoints</string>
    <string name="draw_explain3">using continuous - hold and drag your field border</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
